Fix misaligned search bar in old browsers

--- a/public/css/organisms.css
+++ b/public/css/organisms.css
@@ -55,6 +55,9 @@
   flex: 1 1 100%;
   justify-content: center;
   margin-top: 1.5rem;
+
+  float: right;
+  clear: both;
 }
 
 .site-header .site-social-links ~ * {
@@ -144,7 +147,6 @@
   }
 
   .site-header .site-social-links {
-    float: right;
     margin-top: 0;
     margin-right: 1.5rem;
   }
